objects/Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grower_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grower User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retailer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retailer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sign_Date__c</fullName>
        <label>Sign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sign_Status__c</fullName>
        <label>Sign Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ag Tech Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>Grower_Agreement</fullName>
        <active>true</active>
        <description>Grower Agreement Record Type.</description>
        <label>Grower Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retailer_Agreement</fullName>
        <active>true</active>
        <description>Retailer Agreement Record Type.</description>
        <label>Retailer Agreement</label>
    </recordTypes>
</CustomObject>